[mod]首页的完成

--- a/miniprogram/pages/boss/home/index.wxml
+++ b/miniprogram/pages/boss/home/index.wxml
@@ -23,7 +23,7 @@
             <text >管理入口</text>
           </view>
         </view>
-        <text class="copyright">© 2024 v0.0.1 </text>
+        <text class="copyright">© 2021 夏冥 倾情出品 </text>
       </view>
     </view>
   </block>
