--- a/miniprogram/pages/student/home/index.wxml
+++ b/miniprogram/pages/student/home/index.wxml
@@ -1,30 +1,118 @@
-<view class="container">
-  <view class="remind-box" wx:if="{{remind}}">
-    <image class="remind-img" src="/images/loadding/loading.gif"></image>
+<view>
+  <!-- 轮播图 -->
+  <view class="top swiper-container">
+    <swiper autoplay indicator-dots circular>
+      <swiper-item wx:for="{{ carouselImages }}" wx:key="id">
+        <image bindtap="handleCarousel" mode="widthFix" src="{{item.url}}"></image>
+      </swiper-item>
+    </swiper>
   </view>
-  <block wx:else>
-    <image class="title" src="/images/loadding/title8.png"></image>
-    <view class="content">
-      <view class="hd" style="transform:rotateZ({{angle}}deg);">
-        <image class="logo" src="{{userInfo.avatarurl}}"></image>
-        <image class="wave" src="/images/loadding/wave.png" mode="aspectFill"></image>
-        <image class="wave wave-bg" src="/images/loadding/wave.png" mode="aspectFill"></image>
+  <view class="content">
+    <view class="notice clearfix">
+      <view class="notice-left clearfix">
+        <text>通知公告</text>
       </view>
-      <view class="bd">
-         <image class="smalltitle" src="/images/loadding/confirm-word.png"></image>
-        <view>
-          <view class="confirm-btn" bindtap='goSign' data-type="student">
-            <text >学员入口</text>
+      <navigator class="notice-righ clearfix" url="/pages/_index/gonggao/gonggao" open-type="navigate">
+        <swiper autoplay="true" circular="true" class="swiper_container" interval="7000" vertical="true">
+          <swiper-item wx:for="{{noticeArr}}" wx:key="id">
+            <view class="swiper_item">{{item.title}}</view>
+          </swiper-item>
+        </swiper>
+      </navigator>
+    </view>
+    <view class="icons">
+      <navigator wx:for="{{iconArr}}" wx:key="id" url="{{item.pageAddress}}" open-type="navigate">
+        <image mode="widthFix" src="{{item.iconUrl}}"></image>
+        <view class="text">{{item.iconName}}</view>
+      </navigator>
+    </view>
+  </view>
+  <view class="footer">
+    <Tabs tabs="{{tabs}}" bindtabsItemChange="handleTabsItemChange">
+      <!-- 车型 -->
+      <block wx:if="{{tabs[0].isActive}}">
+        <view class="tab-item" wx:for="{{carTypes}}" wx:key="id" wx:if='{{index < 4}}'>
+          <view class="tb-left">
+            <view class="tb-l-top flex-row">
+              <text class="ovlkkd">{{item.name}}</text>
+              <text class="colo-left">￥{{item.price}}</text>
+            </view>
+            <view class="tb-l-bott">
+              <text>{{item.describe}}</text>
+              <text class="lfeds"></text>
+            </view>
           </view>
-           <view class="confirm-btn" bindtap='goSign' data-type="coach">
-            <text >教练入口</text>
-          </view>
-           <view class="confirm-btn" bindtap='goSign' data-type="admin">
-            <text >管理入口</text>
+          <view bindtap="hiti" class="tb-right" data-id="{{item.id}}" data-isflag="{{item.isflag}}">
+            <view class="tb-buttsa">
+              <text>{{ item.statusText }}</text>
+            </view>
           </view>
         </view>
-        <text class="copyright">© 2021 夏冥 倾情出品 </text>
-      </view>
-    </view>
-  </block>
+        <navigator class="buttda" url="/pages/_index/banxing/banxing?openid={{openid}}">
+          <text>查看全部班型 〉</text>
+        </navigator>
+      </block>
+      <!-- 教练 -->
+      <block wx:elif="{{tabs[1].isActive}}">
+        <view class="tab-item" wx:for="{{coachList}}" wx:key="id" wx:if='{{index < 4}}'>
+          <view class="tb-ll">
+            <view class="tous-img">
+              <image class="toux-img" src="{{item.avatar}}"></image>
+            </view>
+          </view>
+          <view class="tb-auto">
+            <view class="t-a-top">
+              <text>{{item.name}}</text>
+            </view>
+            <view class="t-a-a">
+              <image class="xin-img" src="../../../images/student/star.png" wx:for="{{item.starscore}}" wx:key="_id"></image>
+              <text>{{item.starscore}}分</text>
+            </view>
+            <view class="t-a-butt">
+              <text>学员{{item.studentCount}}</text>
+              |
+              <text>教龄{{item.driving_age}}年</text>
+            </view>
+          </view>
+          <view bindtap="goto" class="tb-right">
+            <view class="tb-buttsa">
+              <text>立即约课</text>
+            </view>
+          </view>
+        </view>
+        <navigator class="buttda" url="/pages/_index/jiaolian/jiaolian">
+          <text>查看全部教练 〉</text>
+        </navigator>
+      </block>
+      <!-- 场地 -->
+      <block wx:elif="{{tabs[2].isActive}}">
+        <view class="tab-item" wx:for="{{venueList}}" wx:key="id" wx:if='{{index<4}}'>
+          <view class="tb-llw">
+            <view class="toaus-img">
+              <image class="toux-img" src="{{item.addressUrl}}"></image>
+            </view>
+          </view>
+          <view class="tb-autso">
+            <view class="t-a-atop">
+              <text>{{item.name}}</text>
+            </view>
+            <view class="t-a-aa">
+              <text>{{item.address}}</text>
+            </view>
+            <view class="t-a-buatt">
+              <text>距离 {{item.distance}}</text>
+            </view>
+          </view>
+          <view bindtap="openLocation" class="tb-right" data-address="{{item.address}}" data-lat="{{item.lat}}" data-lng="{{item.ing}}" data-name="{{item.name}}">
+            <view class="tb-buttsaa">
+              <text>到这里</text>
+            </view>
+          </view>
+        </view>
+        <navigator class="buttda" url="/pages/_index/changdi/changdi">
+          <text>查看全部场地 〉</text>
+        </navigator>
+      </block>
+    </Tabs>
+  </view>
 </view>
