--- a/miniprogram/pages/student/home/index.wxml
+++ b/miniprogram/pages/student/home/index.wxml
@@ -29,89 +29,10 @@
   </view>
   <view class="footer">
     <Tabs tabs="{{tabs}}" bindtabsItemChange="handleTabsItemChange">
-      <!-- 车型 -->
-      <block wx:if="{{tabs[0].isActive}}">
-        <view class="tab-item" wx:for="{{carTypes}}" wx:key="id" wx:if='{{index < 4}}'>
-          <view class="tb-left">
-            <view class="tb-l-top flex-row">
-              <text class="ovlkkd">{{item.name}}</text>
-              <text class="colo-left">￥{{item.price}}</text>
-            </view>
-            <view class="tb-l-bott">
-              <text>{{item.describe}}</text>
-              <text class="lfeds"></text>
-            </view>
-          </view>
-          <view bindtap="hiti" class="tb-right" data-id="{{item.id}}" data-isflag="{{item.isflag}}">
-            <view class="tb-buttsa">
-              <text>{{ item.statusText }}</text>
-            </view>
-          </view>
-        </view>
-        <navigator class="buttda" url="/pages/_index/banxing/banxing?openid={{openid}}">
-          <text>查看全部班型 〉</text>
-        </navigator>
-      </block>
-      <!-- 教练 -->
-      <block wx:elif="{{tabs[1].isActive}}">
-        <view class="tab-item" wx:for="{{coachList}}" wx:key="id" wx:if='{{index < 4}}'>
-          <view class="tb-ll">
-            <view class="tous-img">
-              <image class="toux-img" src="{{item.avatar}}"></image>
-            </view>
-          </view>
-          <view class="tb-auto">
-            <view class="t-a-top">
-              <text>{{item.name}}</text>
-            </view>
-            <view class="t-a-a">
-              <image class="xin-img" src="../../../images/student/star.png" wx:for="{{item.starscore}}" wx:key="_id"></image>
-              <text>{{item.starscore}}分</text>
-            </view>
-            <view class="t-a-butt">
-              <text>学员{{item.studentCount}}</text>
-              |
-              <text>教龄{{item.driving_age}}年</text>
-            </view>
-          </view>
-          <view bindtap="goto" class="tb-right">
-            <view class="tb-buttsa">
-              <text>立即约课</text>
-            </view>
-          </view>
-        </view>
-        <navigator class="buttda" url="/pages/_index/jiaolian/jiaolian">
-          <text>查看全部教练 〉</text>
-        </navigator>
-      </block>
-      <!-- 场地 -->
-      <block wx:elif="{{tabs[2].isActive}}">
-        <view class="tab-item" wx:for="{{venueList}}" wx:key="id" wx:if='{{index<4}}'>
-          <view class="tb-llw">
-            <view class="toaus-img">
-              <image class="toux-img" src="{{item.addressUrl}}"></image>
-            </view>
-          </view>
-          <view class="tb-autso">
-            <view class="t-a-atop">
-              <text>{{item.name}}</text>
-            </view>
-            <view class="t-a-aa">
-              <text>{{item.address}}</text>
-            </view>
-            <view class="t-a-buatt">
-              <text>距离 {{item.distance}}</text>
-            </view>
-          </view>
-          <view bindtap="openLocation" class="tb-right" data-address="{{item.address}}" data-lat="{{item.lat}}" data-lng="{{item.ing}}" data-name="{{item.name}}">
-            <view class="tb-buttsaa">
-              <text>到这里</text>
-            </view>
-          </view>
-        </view>
-        <navigator class="buttda" url="/pages/_index/changdi/changdi">
-          <text>查看全部场地 〉</text>
-        </navigator>
+      <block>
+        <List wx:if="{{tabsType === 'car'}}" type="{{tabsType}}" data="{{carTypes}}" limit="4"></List>
+        <List wx:elif="{{tabsType === 'coach'}}" type="{{tabsType}}" data="{{coachList}}" limit="4"></List>
+        <List wx:elif="{{tabsType === 'place'}}" type="{{tabsType}}" data="{{venueList}}" limit="4"></List>
       </block>
     </Tabs>
   </view>
