--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -1,35 +1,219 @@
 /**app.wxss**/
 /**app.wxss**/
 @import 'wxui.wxss';
-page{
-  font-family: -apple-system-font, Helvetica Neue, Helvetica, sans-serif;
-  font-size: 10pt;
-  line-height: 150%;
-  min-height: 100%;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
+@import 'default.wxss';
+page {
+  background-color: #F5F6F7;
+  font-family: -apple-system-font,Helvetica Neue,Helvetica,sans-serif;
 }
+
 .container {
-  position: relative;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  min-height: 100%;
-  padding-bottom: 100rpx;
-  box-sizing: border-box;
-} 
-.remind-box {
-  flex: 1;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  padding-bottom: 300rpx;
+  justify-content: space-between;
+  padding: 200rpx 0;
+  box-sizing: border-box;
 }
-.remind-img {
-  width: 250rpx;
-  height: 250rpx;
-  padding-bottom: 25rpx;
+
+.center {
+  margin: 0 auto;
+  text-align: center;
 }
+
+.col-100 {
+  width: 100vw;
+  background-color: #FFFFFF;
+  overflow: hidden;
+}
+
+.adImage {
+  height: 300rpx;
+  width: 100%;
+}
+
+.button-90 {
+  width: 90%;
+}
+
+.button-80 {
+  width: 80%;
+}
+
+.bd-left {
+  border-left: solid #F2F2F2 2rpx;
+}
+
+.bd-right {
+  border-right: solid #F2F2F2 2rpx;
+}
+
+.bd-bottom {
+  border-bottom: solid #F2F2F2 2rpx;
+}
+
+.bg-white {
+  background-color: #FFF;
+}
+
+.block {
+  display: block;
+}
+
+.block-inline {
+  display: inline-block
+}
+
+.bottom-text {
+  width: 100%;
+  color: #DDD;
+  text-align: center;
+}
+
+.bottom-text-small {
+  width: 80%;
+  color: #DDD;
+  font-size: 24rpx;
+  text-align: center;
+}
+
+.button-hover::after,.navigator-hover {
+  background-color: rgba(255, 147, 38, 0.1);
+  opacity: 0.7;
+}
+
+.card {
+  margin: 20rpx;
+  padding: 40rpx;
+  background-color: white;
+  border-radius: 10rpx;
+  box-shadow: 0 7rpx 10rpx 5rpx #F0F1F2;
+}
+
+.card-top {
+  margin: 60rpx 20rpx 20rpx 20rpx;
+  font-size: small;
+  color: #999;
+}
+
+.fl-left {
+  float: left;
+}
+
+.fl-right {
+  float: right;
+}
+
+.flex-out {
+  display:flex;
+  flex-direction:column;
+}
+
+.flex-in {
+  align-self: center;
+}
+
+.font-larger {
+  font-size: larger
+}
+
+.font-big {
+  font-size: large;
+}
+
+.font-medium {
+  font-size: medium;
+}
+.font-small {
+  font-size: small;
+}
+
+.icon-right {
+  float: right;
+  color: #CCC;
+}
+
+.includeFloat {
+  overflow: hidden;
+}
+
+.mg-20 {
+  margin: 20rpx;
+}
+
+.mg-20-vertical {
+  margin: 20rpx 0;
+}
+
+.mg-left {
+  margin-left: 2rpx;
+}
+
+.mg-right {
+  margin-right: 2rpx;
+}
+
+.mg-right-bigger {
+  margin-right: 300rpx;
+}
+
+.mg-bottom {
+  margin-bottom: 2rpx;
+}
+
+.mg-bottom-10 {
+  margin-bottom: 10rpx;
+}
+
+.mg-bottom-20 {
+  margin-bottom: 20rpx;
+}
+
+.mg-bottom-40 {
+  margin-bottom: 40rpx;
+}
+
+.mg-top-20 {
+  margin-top: 20rpx;
+}
+
+.mg-top-40 {
+  margin-top: 40rpx;
+}
+
+.pa-10 {
+  padding: 10rpx;
+}
+
+.pa-20 {
+  padding: 20rpx;
+}
+
+.setting-navigator {
+  border-bottom: #F8F8F8 1px solid;
+  padding: 30rpx 20rpx 30rpx 60rpx;
+  color: #333;
+}
+
+.view-white {
+  background-color: white;
+  overflow: hidden;
+}
+
+.text-hint {
+  font-size: xx-large;
+  margin: 0 auto;
+  text-align: center;
+  color: #CCC;
+}
+
+.wrapper {
+  display: table;
+}
+
+.cell {
+  display: table-cell;
+  vertical-align: middle;
+}
+
