--- a/miniprogram/pages/student/user/index.wxml
+++ b/miniprogram/pages/student/user/index.wxml
@@ -1,2 +1,42 @@
-<!--pages/student/user/index.wxml-->
-<text>pages/student/user/index.wxml</text>
+<!--个人信息-->
+<view class='userinfo-bg bg-white'>
+  <view class='userinfo-out'>
+    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo" class='button-80'> 微信登录 </button>
+    <block wx:else>
+    <navigator class='userinfo' url='personal/personal' hover-class="userinfo-hover">
+      <view class='userinfo-info'>
+        <text class='userNickName'>{{userInfo.nickName}} </text>
+        <text class='userStatus icon-{{userStatus[0]}}'>{{userStatus[1]}}</text>
+      </view>
+      <view class='userinfo-avatar'>
+        <image class="user-profile-photo" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
+      </view>
+    </navigator>
+    </block>
+  </view>
+</view>
+
+<!--学车信息-->
+<view class="weui-cells">
+  <navigator class="weui-cell weui-cell_access" wx:for='{{userBooking}}' wx:key='key' hover-class="weui-cell_active"
+    target="{{item.target}}" open-type="{{item.openType}}" url="{{item.url}}">
+    <view class="weui-cell__bd {{item.className}}">{{item.text}}</view>
+    <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+  </navigator>
+  <navigator class="weui-cell weui-cell_access" hover-class="weui-cell_active" url="coach/coach" >
+    <view class="weui-cell__bd {{item.className}}">我的教练</view>
+    <view class="weui-cell__ft weui-cell__ft_in-access">{{personalInfo.coachId!=null?coachInfo.name:'未指定教练'}}</view>
+  </navigator>
+</view>
+
+<!--联系官方-->
+<view class="weui-cells">
+  <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" bindtap='complaint'>
+    <view class="weui-cell__bd">投诉电话</view>
+    <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+  </view>
+  <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" bindtap='clickAbout'>
+    <view class="weui-cell__bd">关于{{appName}}</view>
+    <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+  </view>
+</view>
