--- a/miniprogram/pages/student/home/index.wxss
+++ b/miniprogram/pages/student/home/index.wxss
@@ -1,10 +1,13 @@
 page {
-  background-color: #f4f5f7;
+  width: 710rpx;
+  margin: 0 20rpx;
+  /* background-color: #f4f5f7; */
+  background-color: #fff;
 }
 
 .swiper-container swiper {
-  width: 750rpx;
-  height: 412rpx;
+  width: 710rpx;
+  height: 300rpx;
 }
 
 .swiper-container swiper image {
@@ -18,11 +21,12 @@ page {
 }
 
 .notice {
-  width: 706rpx;
-  height: 90rpx;
-  background-color: #fff;
-  margin: 0 auto;
+  width: 710rpx;
+  height: 50rpx;
+  margin-top: 16rpx;
   position: relative;
+  display: flex;
+  align-items: center;
   border-radius: 8rpx;
   box-shadow: 0 3rpx 5rpx 1rpx #ccc;
 }
@@ -37,18 +41,17 @@ page {
   font-family: '微软雅黑';
   text-align: center;
   line-height: 42rpx;
-  position: absolute;
-  top: 25rpx;
+  position: relative;
   left: 22rpx;
 }
 
 .notice-righ {
   width: 445rpx;
   height: 100%;
-  position: absolute;
-  right: 66rpx;
+  position: relative;
+  margin-left: 66rpx;
   font-size: 24rpx;
-  line-height: 88rpx;
+  line-height: 30rpx;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -64,7 +67,7 @@ page {
   height: 100%;
   position: absolute;
   font-size: 24rpx;
-  line-height: 88rpx;
+  line-height: 50rpx;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -73,16 +76,19 @@ page {
 .icons {
   width: 100%;
   height: 180rpx  !important;
+  margin-top: 20rpx;
   background-color: #fff;
   display: flex;
   justify-content: space-around;
 }
 
 .icons navigator {
-  flex: 1;
+  width: 180rpx;
+  /* flex: 1; */
   display: flex;
   flex-direction: column;
   align-items: center;
+  box-shadow: 0 3rpx 5rpx 1rpx #ccc;
 }
 
 .icons navigator image {
