--- a/miniprogram/pages/student/home/index.wxss
+++ b/miniprogram/pages/student/home/index.wxss
@@ -94,20 +94,20 @@ page {
 
 .icons navigator image {
   width: 66rpx;
-  margin: 20rpx;
+  margin: 24rpx;
 }
 
 .icons .text {
-  font-weight: bold;
+  font-weight: 450;
   color: rgb(33, 33, 33);
-  font-size: 34rpx;
+  font-size: 32rpx;
   line-height: 40rpx;
 }
 
 .icons .sub {
  margin-top: 20rpx;
   color: rgb(153, 153, 153);
-  font-size: 28rpx;
+  font-size: 24rpx;
   line-height: 30rpx;
 }
 
@@ -216,5 +216,35 @@ page {
   right: 0;
   display: flex;
   align-items: center;
+}
+.coach-sub-item {
+  width: 130rpx;
+  height: 100rpx;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.coach-score {
+  font-size: 30rpx;
+  font-weight: 550;
+  color: #fe9602;
+  line-height: 40rpx;
+}
+.coach-sub-item .coach-defaul{
+  font-size: 30rpx;
+  font-weight: 600;
+  color: rgb(33, 33, 33);
+  line-height: 40rpx;
+}
+.coach-sub-item .dec{
+  font-size: 26rpx;
+  font-weight: 400;
+  color: rgb(150, 150, 150);
+  line-height: 40rpx;
+}
+.coach-sub image{
+  width: 40rpx;
+  height: 100rpx;
 }
 
