--- a/miniprogram/pages/coach/home/index.wxss
+++ b/miniprogram/pages/coach/home/index.wxss
@@ -80,7 +80,7 @@ page {
 
 .order-container {
   position: relative;
-  top: -60rpx;
+  top: -30rpx;
   display: flex;
   justify-content: space-between;
   width: 690rpx;
@@ -91,8 +91,122 @@ page {
 .order-container .order-item {
   display: flex;
   justify-content: space-between;
-  width: 325rpx;
-  height: 160rpx;
-  background-color: #F6F6F6;
+  width: 280rpx;
+  height: 120rpx;
+  padding: 20rpx;
+  background-color: #FFF;
   border-radius: 20rpx;
+}
+.order-item .text {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.order-item .text .text-title {
+  font-size: 28rpx;
+  color: rgb(172 ,172, 172);
+}
+.order-item .text .text-num {
+  font-size: 32rpx;
+  color: rgb(23, 21, 21);
+  font-weight: 500;
+}
+.order-item image {
+  width: 90rpx;
+  height: 100rpx;
+  opacity: 0.5;
+}
+.tabs {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  width: 690rpx;
+  height: 100rpx;
+  padding: 30rpx 30rpx;
+}
+.tabs-item {
+  width: 345rpx;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 40rpx;
+  color: rgb(172 ,172, 172);
+}
+.tabs-item image {
+  width: 80rpx;
+  height: 40rpx;
+}
+.tabs-active {
+  color: rgb(23, 21, 21);
+  font-weight: 550;
+}
+.order-list {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 60rpx;
+}
+.order-list-item {
+  margin: 0rpx 30rpx 30rpx 30rpx;
+  width: 630rpx;
+  padding: 30rpx;
+  height: 384rpx;
+  background-color: #FFF;
+  border-radius: 20rpx;
+}
+.order-list-item .user-info {
+  width: 100%;
+  height: 60rpx;
+  display: flex;
+  align-items: center;
+  line-height: 60rpx;
+}
+.order-list-item .user-info .avatar {
+  width: 60rpx;
+  height: 60rpx;
+  border-radius: 60rpx
+}
+.order-list-item .user-info .name {
+  color: rgb(23, 21, 21);
+  font-size: 32rpx;
+  font-weight: 500;
+  margin-left: 16rpx;
+}
+.order-list-item .user-info .phone {
+  color: rgb(172, 172, 172);
+  font-size: 28rpx;
+  font-weight: 400;
+  margin-left: 34rpx;
+}
+.order-list-item .sub {
+  color: rgb(172, 172, 172);
+  font-size: 28rpx;
+  font-weight: 400;
+  margin-left: 64rpx;
+}
+.order-list-item .order-info {
+  margin-top: 30rpx;
+  padding: 20rpx;
+  display: flex;
+  flex-direction: column;
+  background-color: #F6F6F6;
+}
+.order-list-item .order-info .detail {
+  display: flex;
+  justify-content: space-between;
+  color: rgb(125, 125, 126);
+  font-size: 28rpx;
+}
+
+.order-list-item .btn{
+  margin-top: 40rpx;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(234, 128, 80);
+  border-radius: 30rpx;
+  font-size: 30rpx;
+  color: #F6F6F6;
 }
