--- a/miniprogram/pages/boss/home/index.wxml
+++ b/miniprogram/pages/boss/home/index.wxml
@@ -1,30 +1,7 @@
-<view class="container">
-  <view class="remind-box" wx:if="{{remind}}">
-    <image class="remind-img" src="/images/loadding/loading.gif"></image>
+<view class="custom-navigation-bar">
+  <view class="navigation-bar-background"></view>
+  <view class="navigation-bar-content">
+    <text class="navigation-bar-title">首页</text>
   </view>
-  <block wx:else>
-    <image class="title" src="/images/loadding/title8.png"></image>
-    <view class="content">
-      <view class="hd" style="transform:rotateZ({{angle}}deg);">
-        <image class="logo" src="{{userInfo.avatarurl}}"></image>
-        <image class="wave" src="/images/loadding/wave.png" mode="aspectFill"></image>
-        <image class="wave wave-bg" src="/images/loadding/wave.png" mode="aspectFill"></image>
-      </view>
-      <view class="bd">
-         <image class="smalltitle" src="/images/loadding/confirm-word.png"></image>
-        <view>
-          <view class="confirm-btn" bindtap='goSign' data-type="student">
-            <text >学员入口</text>
-          </view>
-           <view class="confirm-btn" bindtap='goSign' data-type="coach">
-            <text >教练入口</text>
-          </view>
-           <view class="confirm-btn" bindtap='goSign' data-type="admin">
-            <text >管理入口</text>
-          </view>
-        </view>
-        <text class="copyright">© 2021 夏冥 倾情出品 </text>
-      </view>
-    </view>
-  </block>
 </view>
+<view class=""></view>
