--- a/miniprogram/pages/boss/home/index.wxss
+++ b/miniprogram/pages/boss/home/index.wxss
@@ -37,6 +37,14 @@ page {
   width: 100%;
   height: 100%;
 }
+navigator {
+  width: 130rpx;
+  height: 150rpx;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
 
 .navigation-bar-title {
   color: white;
