--- a/miniprogram/pages/boss/students_manage/edit/index.wxss
+++ b/miniprogram/pages/boss/students_manage/edit/index.wxss
@@ -88,7 +88,7 @@ page {
   flex-wrap: wrap;
 }
 .picker{
-  padding: 13px;
+  padding: 14rpx;
   background-color: #FFFFFF;
   font-size: 30rpx;
   color: rgb(45, 44, 44);
@@ -101,7 +101,13 @@ page {
   width: 690rpx;
   height: 80rpx;
   margin-top: 20rpx;
-  border-radius: 20rpx;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.bottom-btn .btn {
+  width: 300rpx;
+  height: 80rpx;
   background-color: rgb(43, 108, 242);
   display: flex;
   align-items: center;
@@ -109,7 +115,13 @@ page {
   color: #FFF;
   font-size: 30rpx;
   font-weight: 400;
+  border-radius: 20rpx;
 }
+.bottom-btn .cancel {
+  background-color: rgb(255, 255, 255);
+  color: #4b4a4a;
+}
+
 .bottom-btn:active {
   background-color: #005bb5;
 }
