--- a/miniprogram/components/radio/index.wxss
+++ b/miniprogram/components/radio/index.wxss
@@ -20,7 +20,7 @@
   color: #fff; /* 选中时的字体颜色 */
 }
 
-label {
+.radio-container label {
   margin-left: 10px;
   font-size: 28rpx;
   color: rgb(45, 44, 44);
